updated tracking provisioning

--- a/.packer/files/tracking.conf
+++ b/.packer/files/tracking.conf
@@ -1,10 +1,14 @@
 server {
-    listen 443 ssl;
+    listen 8080;
     server_name tracking.shwrm;
-    root /var/www/tracking/public;
+    root /home/tracking/current/public;
 
     location / {
         try_files $uri /index.php$is_args$args;
+    }
+
+    location /status {
+		return 200;
     }
 
     location ~ ^/index\.php(/|$) {
@@ -13,7 +17,13 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
-
+	      fastcgi_param APP_ENV prod;
+        fastcgi_param APP_SECRET 7c3c8bf335ea7e5ecfd99b44ac80c07d;
+        fastcgi_param APP_DEBUG 0;
+        fastcgi_param TRACKING_PASSWORD 3cefb5314b169530c137b6261239e8d7;
+        fastcgi_param PWR_PARTNER_ID PWRWS03883;
+        fastcgi_param PWR_PARTNER_KEY B020A38D14;
+        fastcgi_param PWR_ENV prod;
         internal;
     }
 
