--- a/.packer/files/nginx.conf
+++ b/.packer/files/nginx.conf
@@ -1,4 +1,4 @@
-user  nginx;
+user  www-data;
 worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
@@ -35,7 +35,7 @@ http {
     real_ip_recursive on;
 
     server_tokens off;
-    
+
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 }
